--- a/indez.html
+++ b/indez.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <head>
-        <h1>Prova push</h1>
+        <h1>Hello World</h1>
     </head>
-    <footer>  
-        
-    </footer>
 </body>
 </html>
